--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,13 +40,16 @@
             style="@style/CustomButton"
             android:text="Goals"
             android:drawableLeft="@drawable/ic_goal_24dp"
-            android:enabled="false"/>
+            android:enabled="false"
+            android:backgroundTint="@color/abc_primary_text_material_light" />
+
         <Button
             android:id="@+id/btnEndlees"
             style="@style/CustomButton"
             android:text="Endless"
             android:drawableLeft="@drawable/ic_endless_24dp"
-            android:enabled="false"/>
+            android:enabled="false"
+            android:backgroundTint="@color/abc_primary_text_material_light" />
 
     </LinearLayout>
 
