--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/titulo"/>
+            android:src="@drawable/titulo"
+            android:paddingBottom="10dp"/>
 
         <Button
             android:id="@+id/btnTimeAttack"
