--- a/app/src/main/res/layout/list_preg_revision.xml
+++ b/app/src/main/res/layout/list_preg_revision.xml
@@ -4,24 +4,30 @@
     android:layout_height="45dp"
     android:orientation="horizontal"
     android:layout_gravity="center_horizontal">
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:id="@+id/titulo"
+            android:textSize="18dp"
+            android:textColor="@color/list_preguntas"
+            android:gravity="center_vertical"
+            android:text="Example 1"
+            android:layout_marginRight="10dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:id="@+id/titulo"
-        android:textSize="18dp"
-        android:textColor="@color/list_preguntas"
-        android:gravity="center_vertical"
-        android:text="Example 1"
-        android:layout_marginLeft="10dp"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/icono"
+            android:src="@drawable/ic_check_36dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:paddingRight="10dp"/>
+    </RelativeLayout>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/icono"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/ic_check_36dp"
-        android:layout_marginLeft="100dp" />
 
 
 
