--- a/app/src/main/res/layout/activity_time_attack.xml
+++ b/app/src/main/res/layout/activity_time_attack.xml
@@ -7,58 +7,63 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.novus.preuvirtual.TimeAttack">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
+        android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:gravity="center">
+        android:paddingTop="12dp">
 
-        <Button
-            android:id="@+id/btnMatematicas"
-            style="@style/CustomButton"
-            android:text="Matemáticas"
-            android:drawableLeft="@drawable/ic_mat_24dp"
-            android:onClick="goTiempo"
-            />
-        <Button
-            android:id="@+id/btnLenguaje"
-            style="@style/CustomButton"
-            android:text="Lenguaje"
-            android:drawableLeft="@drawable/ic_len_24dp"
-            android:enabled="false"/>
-        <Button
-            android:id="@+id/btnHistoria"
-            style="@style/CustomButton"
-            android:text="Historia"
-            android:drawableLeft="@drawable/ic_his_24dp"
-            android:enabled="false"/>
-        <Button
-            android:id="@+id/btnCiencias"
-            style="@style/CustomButton"
-            android:text="Ciencias"
-            android:drawableLeft="@drawable/ic_cien_24dp"
-            android:enabled="false"/>
-        <Button
-            android:id="@+id/btnBiologia"
-            style="@style/CustomButton"
-            android:text="Biología"
-            android:drawableLeft="@drawable/ic_bio_24dp"
-            android:enabled="false"/>
-        <Button
-            android:id="@+id/btnQuimica"
-            style="@style/CustomButton"
-            android:text="Química"
-            android:drawableLeft="@drawable/ic_quim_24dp"
-            android:enabled="false"/>
-        <Button
-            android:id="@+id/btnFisica"
-            style="@style/CustomButton"
-            android:text="Física"
-            android:drawableLeft="@drawable/ic_fis_24dp"
-            android:enabled="false"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:gravity="center">
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/btnMatematicas"
+                style="@style/CustomButton"
+                android:text="Matemáticas"
+                android:drawableLeft="@drawable/ic_mat_24dp"
+                android:onClick="goTiempo"
+                />
+            <Button
+                android:id="@+id/btnLenguaje"
+                style="@style/CustomButton"
+                android:text="Lenguaje"
+                android:drawableLeft="@drawable/ic_len_24dp"
+                android:enabled="false"/>
+            <Button
+                android:id="@+id/btnHistoria"
+                style="@style/CustomButton"
+                android:text="Historia"
+                android:drawableLeft="@drawable/ic_his_24dp"
+                android:enabled="false"/>
+            <Button
+                android:id="@+id/btnCiencias"
+                style="@style/CustomButton"
+                android:text="Ciencias"
+                android:drawableLeft="@drawable/ic_cien_24dp"
+                android:enabled="false"/>
+            <Button
+                android:id="@+id/btnBiologia"
+                style="@style/CustomButton"
+                android:text="Biología"
+                android:drawableLeft="@drawable/ic_bio_24dp"
+                android:enabled="false"/>
+            <Button
+                android:id="@+id/btnQuimica"
+                style="@style/CustomButton"
+                android:text="Química"
+                android:drawableLeft="@drawable/ic_quim_24dp"
+                android:enabled="false"/>
+            <Button
+                android:id="@+id/btnFisica"
+                style="@style/CustomButton"
+                android:text="Física"
+                android:drawableLeft="@drawable/ic_fis_24dp"
+                android:enabled="false"/>
 
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
