--- a/app/src/main/res/layout/fragment_pregunta.xml
+++ b/app/src/main/res/layout/fragment_pregunta.xml
@@ -5,11 +5,12 @@
     tools:context="com.novus.preuvirtual.PreguntaFragment"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingTop="16dp">
+    >
 
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -30,6 +31,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:lineSpacingMultiplier="1.2"
+                android:textSize="15sp"
                 android:text="1.- Donec quam felis, ultrices nec, pellen teque eu, pretium quis, sem."
                 />
 
