--- a/app/src/main/res/layout/activity_tiempo.xml
+++ b/app/src/main/res/layout/activity_tiempo.xml
@@ -31,6 +31,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:inputType="numberSigned"
+            android:maxLength="3"
             android:id="@+id/editMinutos"/>
 
         <TextView
